@@ -278,18 +278,19 @@ function lose()
 	SendStat(siCustomAchievement, loc("The time that you have left when you reach the blue hedgehog will be added to the next turn."))
 	SendStat(siCustomAchievement, loc("Each turn you'll have only one rope to use."))
 	SendStat(siCustomAchievement, loc("You'll lose if you die or if your time is up."))
-	SendStat(siPointType, loc("milliseconds"))
+	SendStat(siPointType, "!TIME")
 	SendStat(siPlayerKills, tostring(runnerTimeTotal), teamB.name)
-	SendStat(siPlayerKills, tostring(GetTeamStats(teamA.name).Kills), teamA.name)
+	SendStat(siPointType, "!EMPTY")
+	SendStat(siPlayerKills, "0", teamA.name)
 	EndGame()
 end
 
 function win()
 	SendStat(siGameResult, loc("Congratulations, you are the fastest!"))
 	-- siCustomAchievements were added earlier
-	SendStat(siPointType, loc("milliseconds"))
+	SendStat(siPointType, "!TIME")
 	SendStat(siPlayerKills, tostring(winningTime), teamA.name)
-	SendStat(siPointType, loc("milliseconds"))
+	SendStat(siPointType, "!TIME")
 	SendStat(siPlayerKills, tostring(runnerTimeTotal), teamB.name)
 	SaveCampaignVar("Mission13Won", "true")
 	checkAllMissionsCompleted()
